fixed loader and overflow issue

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 #root {
     width: 100vw;
     min-height: 100vh;
+    max-width: 100%;
 }
 
 .App {
@@ -604,7 +605,7 @@ User management page ***************
     height: 4rem !important;
     width: 4rem !important;
     color: #086c74 !important;
-    z-index: 999 !important;
+    z-index: 9999 !important;
 }
 
 .delete_media_list {
@@ -949,6 +950,7 @@ User management page ***************
 .card_title {
     font-weight: 500;
     font-size: 24px;
+    margin-block: 10px;
 }
 
 .detail-image-div {
@@ -1001,10 +1003,11 @@ User management page ***************
     transform: translate(-50%, -50%);
     padding: 10px 20px;
     border: 1px solid #006D77;
+    white-space: nowrap;
 }
 
 .lowercontainer {
-    margin-top: 40px;
+    margin-top: 60px;
     display: flex;
     justify-content: space-between;
     gap: 20px;
@@ -1482,16 +1485,16 @@ input[type="radio"]:checked::after {
 
 .custom_select_popup_item {
     padding: 8px 16px;
+    cursor: pointer !important;
 }
 
-.selected_popup_item:hover {
+.custom_select_popup_item:hover {
     background-color: rgba(0, 0, 0, 0.1);
-    cursor: pointer;
 }
 
 .home-search-button,
 .sr-search-button {
-    height: 44px;
+    height: 40px;
     color: white;
     border: none;
     font-size: 16px;
@@ -1511,7 +1514,6 @@ input[type="radio"]:checked::after {
     left: 50% !important;
     transform: translate(-50%, -50%) !important;
 }
-
 
 /* *************************
 Mobile
@@ -1653,6 +1655,7 @@ Mobile
 
     .detailed-title-component {
         justify-content: flex-start !important;
+        align-items: flex-start;
         flex-direction: column !important;
         gap: 0px !important;
     }
@@ -1693,6 +1696,7 @@ Mobile
     }
 
     .lowercontainer {
+        margin-top: 50px;
         flex-direction: column;
         justify-content: flex-start;
         gap: 20px;
